--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -41,4 +41,6 @@
 @import "2-layouts/salesview-body";
 @import "2-layouts/sales-body";
 @import "2-layouts/pay-checkout-cart";
+@import "2-layouts/profile";
+
 
