--- a/resources/assets/sass/2-layouts/_top-brands.scss
+++ b/resources/assets/sass/2-layouts/_top-brands.scss
@@ -1,6 +1,6 @@
 .top-brands{
     width:100%;
-    height:200px;
+    min-height:120px;
     padding:1% 10%;
     box-sizing:border-box;
     background:white;
