--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -59,7 +59,7 @@ h4.title{
     &.video-blog, &.catalog-view, &.pay-body,
      &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body,
      &.u-will-also-like, &.other-products-of-this-seller, &.similar-products,
-     &.compare{
+     &.compare, &.profile, &.profile{
         padding:1% 10%;
     }
 }
@@ -101,6 +101,21 @@ p.sub-title{
             color:$link_hover_color;
         }
     }
+}
+input#submit{
+    background:$item_price_color;
+    color:white;
+    font-size:16px;
+    padding:15px 0;
+    width:100%;
+    white-space:nowrap;
+    text-align:center;
+    border-radius:23px;
+    margin:15% auto 0;
+    font-weight:bold;
+}
+.nice-select ul.list{
+    width:100%;
 }
 .btn-yellow{
     border-radius:23px;
@@ -222,6 +237,7 @@ button.owl-next, .owl-carousel .owl-nav button.owl-next{
 .owl-carousel{
     .owl-stage-outer{
         height:100%;
+        padding:2% 0;
     }
     .owl-stage{
         height:100%;
@@ -238,7 +254,7 @@ button.owl-next span{
     font-size:45px;
     line-height:15px;
     height:22px;
-}
+} 
 .outter-products{
     width:100%;
     height:610px;
@@ -250,13 +266,18 @@ button.owl-next span{
         margin:0 auto;
         position:absolute;
         left:10%;
-        top:-3%;
+        top:-6%;
         .item{
             margin:0;
-            height:600px;
+            height:100%;
             padding:10px 20px 5px;
             @include border(1px, $item_border_color, 0);
             background:white;
+            z-index:2;
+            &:hover{
+                transform: scale(1.05);
+                transition:0.4s ease;
+            }
             .product-img{
                 height:45%;
                 position:relative;
@@ -925,18 +946,6 @@ form.big-filter-without-title-checkbox{
         }
 
     }
-    input#submit{
-        background:$item_price_color;
-        color:white;
-        font-size:16px;
-        padding:15px 0;
-        width:100%;
-        white-space:nowrap;
-        text-align:center;
-        border-radius:23px;
-        margin:15% auto 0;
-        font-weight:bold;
-    }
 }
 // form.big-filter-with-title-checkbox{
 //     width:18%;
@@ -1003,18 +1012,6 @@ form.big-filter-without-title-checkbox{
 //         }
        
 //     }
-//     input#submit{
-//         background:$item_price_color;
-//         color:white;
-//         font-size:16px;
-//         padding:15px 0;
-//         width:100%;
-//         white-space:nowrap;
-//         text-align:center;
-//         border-radius:23px;
-//         margin:15% auto 0;
-//         font-weight:bold;
-//     }
 //     .filter-item{
 //         position:relative;
 //         width:100%;
@@ -1037,18 +1034,6 @@ form.big-filter-with-listof-checkbox{
     margin-top:5%;
     text-align: start;
     @include displayFlex(flex-start, column, flex-start);
-    input#submit{
-        background:$item_price_color;
-        color:white;
-        font-size:16px;
-        padding:15px 0;
-        width:100%;
-        white-space:nowrap;
-        text-align:center;
-        border-radius:23px;
-        margin:15% auto 0;
-        font-weight:bold;
-    }
     .custom-control{
         margin:2% 0;
     }
@@ -1189,7 +1174,7 @@ form.small-filter{
         &.video-blog, &.catalog-view, &.pay-body,
          &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body,
          &.u-will-also-like, &.other-products-of-this-seller, &.similar-products,
-         &.brand-view, &.compare{
+         &.brand-view, &.compare, &.profile{
             padding:1% 8%;
         }
     }
@@ -1203,7 +1188,7 @@ form.small-filter{
         &.video-blog, &.catalog-view, &.pay-body,
          &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body,
          &.u-will-also-like, &.other-products-of-this-seller, &.similar-products,
-         &.compare, &.brand-view{
+         &.compare, &.brand-view, &.profile{
             padding:1% 5%;
         }
     }
@@ -1324,7 +1309,7 @@ form.small-filter{
         &.video-blog, &.catalog-view, &.pay-body,
          &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body,
          &.u-will-also-like, &.other-products-of-this-seller, &.similar-products,
-         &.compare, &.brand-view{
+         &.compare, &.brand-view , &.profile{
             padding:1.5% 5%;
         }
     }
@@ -1365,7 +1350,7 @@ form.small-filter{
         &.video-blog, &.catalog-view, &.pay-body,
          &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body,
          &.u-will-also-like, &.other-products-of-this-seller, &.similar-products,
-         &.compare, &.brand-view{
+         &.compare, &.brand-view, &.profile{
             padding:2% 5%;
         }
     }
