--- a/public/css/app.css
+++ b/public/css/app.css
@@ -427,7 +427,8 @@ body {
   text-align: center;
   color: black;
   font-size: 22px;
-  margin-top: 50%;
+  min-height: 100px;
+  padding-top: 36px;
 }
 
 a {
@@ -501,7 +502,7 @@ h6.title {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  font-size: 20px;
+  font-size: 18px;
   text-align: start;
   width: 100%;
   color: #0b2546;
@@ -581,13 +582,15 @@ input#submit {
 }
 
 span.sale.big {
+  width: 75%;
   position: absolute;
-  bottom: 5px;
-  padding: 8px 30px;
+  bottom: 20px;
+  padding: 3px 0;
   right: 0;
   color: white;
-  border-radius: 15px;
-  font-size: 20px;
+  border-radius: 25px;
+  font-size: 18px;
+  font-weight: 900;
   text-transform: uppercase;
   text-align: center;
   background: #11da53;
@@ -932,7 +935,7 @@ nav ol.breadcrumb li {
 
 .outter-catalog-view, .outter-brand-view-body,
 .outter-list-of-shops, .outter-list-of-blogs {
-  min-height: 500px;
+  min-height: 200px;
   width: 80%;
   padding: 1% 0;
   margin: 0 auto;
@@ -962,7 +965,7 @@ nav ol.breadcrumb li {
 .outter-list-of-blogs .wrapper-filtered-blogs,
 .outter-list-of-blogs .wrapper-filtered-shops {
   width: 80%;
-  min-height: 500px;
+  min-height: 200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1345,7 +1348,7 @@ nav ol.breadcrumb li {
 
 .all-filtered-items {
   width: 100%;
-  min-height: 500px;
+  min-height: 200px;
   background: white;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
@@ -2210,6 +2213,24 @@ form.small-filter .card .card-body a.show-more {
 .slide-banner img {
   width: 100%;
   height: 100%;
+}
+
+.category-btn {
+  color: #0042ff;
+  font-size: 22px;
+}
+
+.custom-checkbox ul {
+  padding-left: 0;
+}
+
+.custom-checkbox ul li.category-list {
+  list-style-type: none;
+  margin: 5px;
+}
+
+.padding-1-10 {
+  padding: 1% 10%;
 }
 
 @media all and (max-width: 1800px) {
@@ -3794,12 +3815,13 @@ nav#menu .mm-navbar__title span {
   transition: .2s linear;
   -webkit-transform: scale(1);
           transform: scale(1);
+  text-align: center;
 }
 
 .main-header .from-statistics-to-account ul.navbar-right li .compare-items,
 .main-header .from-statistics-to-account ul.navbar-right li .cart-items {
   width: 300px;
-  height: 400px;
+  height: auto;
   border: none;
   border-radius: 0;
   padding: 0;
@@ -3817,7 +3839,8 @@ nav#menu .mm-navbar__title span {
 .main-header .from-statistics-to-account ul.navbar-right li .compare-items ul,
 .main-header .from-statistics-to-account ul.navbar-right li .cart-items ul {
   padding: 0;
-  height: 85%;
+  min-height: 80px;
+  max-height: 320px;
   overflow: hidden;
 }
 
@@ -3951,9 +3974,9 @@ nav#menu .mm-navbar__title span {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: absolute;
-  bottom: 10px;
+  padding: 10px 0;
   width: 100%;
+  background-color: #fff;
 }
 
 .bottom-btn .switch-to-compare, .bottom-btn .switch-to-cart {
@@ -4358,13 +4381,33 @@ nav#main_navbar .collapse .navbar-nav li.full-image-banner2 {
   position: absolute;
   top: 0;
   left: 196%;
-  width: 220px;
+  width: 110px;
   height: 100%;
+  -webkit-column-count: 1;
+          column-count: 1;
+  -webkit-column-fill: auto;
+          column-fill: auto;
+  -webkit-column-gap: 0;
+          column-gap: 0;
+  background-color: transparent;
+  padding: 10px;
+}
+
+nav#main_navbar .collapse .navbar-nav li.full-image-banner2 .all-brands {
+  background-color: #fff;
+  padding: 5px 0;
+  width: 100%;
+}
+
+nav#main_navbar .collapse .navbar-nav li.full-image-banner2 .all-brands a {
+  color: #0042ff;
+  font-size: 16px;
 }
 
 nav#main_navbar .collapse .navbar-nav li.full-image-banner2 img {
   width: 100%;
-  height: 100%;
+  height: 20%;
+  padding: 5px 0;
 }
 
 nav#main_navbar .collapse .navbar-nav .dropdown:hover .center-icon i:before {
@@ -4625,7 +4668,7 @@ nav#main_navbar .collapse .navbar-nav .dropdown:hover .round span:nth-child(6) {
 #products-of-day .product-item .product-info .product-image span.sale {
   position: absolute;
   left: -5%;
-  bottom: 0;
+  bottom: 20px;
 }
 
 #products-of-day .product-item .product-info .description {
@@ -4647,8 +4690,11 @@ nav#main_navbar .collapse .navbar-nav .dropdown:hover .round span:nth-child(6) {
 }
 
 #products-of-day .product-item .product-info .description .rate {
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  padding: 5px 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-size: 20px;
 }
 
 #products-of-day .owl-theme .owl-nav.disabled + .owl-dots {
@@ -4820,6 +4866,7 @@ nav#main_navbar .collapse .navbar-nav .dropdown:hover .round span:nth-child(6) {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  padding: 5px 0;
 }
 
 .current-old-price.horizontal {
@@ -4834,6 +4881,7 @@ nav#main_navbar .collapse .navbar-nav .dropdown:hover .round span:nth-child(6) {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-top: 8px;
 }
 
 .current-old-price h5.price {
@@ -4984,12 +5032,11 @@ nav#main_navbar .collapse .navbar-nav .dropdown:hover .round span:nth-child(6) {
   border: none !important;
 }
 
-/* :not(:checked) is a filter, so that browsers that don’t support :checked don’t 
+/* :not(:checked) is a filter, so that browsers that don’t support :checked don’t
     follow these rules. Every browser that supports :checked also supports :not(), so
     it doesn’t make the test unnecessarily selective */
 .rating:not(:checked) > input {
-  position: absolute;
-  top: -9999px;
+  display: none;
   clip: rect(0, 0, 0, 0);
 }
 
@@ -5931,7 +5978,6 @@ nav#main_navbar .collapse .navbar-nav .dropdown:hover .round span:nth-child(6) {
 
 .top-brands {
   width: 100%;
-  min-height: 120px;
   padding: 1% 10%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -5940,15 +5986,17 @@ nav#main_navbar .collapse .navbar-nav .dropdown:hover .round span:nth-child(6) {
 }
 
 .top-brands .one-row-brands {
-  height: 45px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .top-brands .one-row-brands .item {
-  width: 33%;
+  width: 8.333%;
   height: 45px;
+  margin: .5em 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -8332,6 +8380,7 @@ nav.products-pagination ul li a {
   font-weight: bold;
   border: none;
   background: transparent;
+  text-align: center;
 }
 
 nav.products-pagination ul li a i {
@@ -8350,6 +8399,7 @@ nav.products-pagination ul li a i:before {
   line-height: 50px;
   font-weight: bold;
   padding: 0;
+  text-align: center;
 }
 
 .outter-single-product-with-des {
@@ -9745,8 +9795,8 @@ nav.products-pagination ul li a i:before {
 }
 
 .outter-sales .sales-banners .banner-item {
-  width: 32%;
-  margin: 1% auto;
+  width: 23%;
+  margin: 1%;
   height: auto;
   position: relative;
 }
