--- a/resources/assets/sass/2-layouts/_similar-products.scss
+++ b/resources/assets/sass/2-layouts/_similar-products.scss
@@ -5,6 +5,7 @@
             height:355px;
             .item{
                 height:340px;
+                cursor: pointer;
                 .product-img{
                     height:54%;
                     span.sale.small{
