--- a/resources/assets/sass/2-layouts/_top-brands.scss
+++ b/resources/assets/sass/2-layouts/_top-brands.scss
@@ -30,3 +30,42 @@
         top:0;
     }
 }
+@media all and (max-width: 1200px) {
+    .top-brands{
+        .one-row-brands {
+            .item {
+                width:10%;
+            }
+        }
+    }
+}
+@media all and (max-width: 1000px) {
+    .top-brands{
+        .one-row-brands {
+            max-height: 65px;
+            overflow-y: hidden;
+            .item {
+                width:20%;
+            }
+        }
+    }
+}
+
+@media all and (max-width: 800px) {
+    .top-brands{
+        .one-row-brands {
+            .item {
+                width:25%;
+            }
+        }
+    }
+}
+@media all and (max-width: 400px) {
+    .top-brands{
+        .one-row-brands {
+            .item {
+                width:33.33%;
+            }
+        }
+    }
+}
