--- a/resources/assets/sass/2-layouts/_product-of-day.scss
+++ b/resources/assets/sass/2-layouts/_product-of-day.scss
@@ -10,6 +10,7 @@
         width:100%;
         height:300px;
         margin:0 10px;
+        cursor: pointer;
         @include border(2px, $title_color, 0);
         background:$bg_grey_color;
         &:last-child{
