--- a/resources/assets/sass/2-layouts/_catalog-section-items.scss
+++ b/resources/assets/sass/2-layouts/_catalog-section-items.scss
@@ -56,6 +56,7 @@
     }
     .all-filtered-blogs{
         @include displayFlex(flex-start, column, flex-start);
+        margin: 10px 0;
         a{
             width:100%;
             margin:1% 0;
@@ -126,6 +127,29 @@
             a {
                 width: 49%;
                 height: 240px;
+            }
+        }
+        .all-filtered-blogs {
+            a {
+                .blog-item {
+                    height: 360px;
+                    flex-flow: column;
+                    .image {
+                        width: 100%;
+                        height: 200px;
+                        img {
+                            height: 100%;
+                            width: 100%;
+                        }
+                        .image-overlay {
+                            height: 200px;
+                            width: 100%;
+                        }
+                    }
+                    .description {
+                        width: 100%;
+                    }
+                }
             }
         }
     }
