--- a/resources/assets/sass/2-layouts/_auth-body.scss
+++ b/resources/assets/sass/2-layouts/_auth-body.scss
@@ -18,7 +18,7 @@
                     }
                 }
                 .input{
-                    width:100%; 
+                    width:100%;
                     @include border(1px,$link_hover_color, 20px );
                     margin-bottom:5%;
                     input{
@@ -33,6 +33,9 @@
                         }
                     }
                 }
+            }
+            .login_by_password {
+                margin: 20px 0;
             }
             .oneline-label{
                 @include displayFlex(space-between, row, center);
@@ -58,7 +61,7 @@
                     margin:0;
                     width:48%;
                     border-radius:20px;
-                } 
+                }
                 .form-check{
                     width:40%;
                     margin:0;
@@ -71,7 +74,7 @@
             label{
                 font-size:18px;
                 color:black;
-                margin-top:5%;
+                //margin-top:5%;
             }
             .social-app-icons{
                 width:100%;
@@ -94,7 +97,7 @@
                     }
                 }
             }
-    
+
         }
     }
     a{
@@ -127,7 +130,7 @@
             form{
                 width:60%;
                 .phone-number{
-                    text-align: center;
+                    //text-align: center;
                     &.mail-phone-number{
                         text-align:left;
                     }
@@ -135,13 +138,14 @@
             }
             .sign-in-through{
                 width:60%;
-                text-align:center;
+                //text-align:center;
                 .social-app-icons{
-                    justify-content: center;
+                    justify-content: flex-start;
                 }
             }
         }
         a{
+            width: 60%;
             margin:3% 0;
         }
     }
