--- a/resources/assets/sass/2-layouts/_index-shop-views.scss
+++ b/resources/assets/sass/2-layouts/_index-shop-views.scss
@@ -4,7 +4,7 @@
     background:$bg_grey_color;
     .outter-shops{
         width:100%;
-        height:770px; 
+        height:770px;
         background:white;
         position:relative;
         .all-shops{
@@ -102,6 +102,7 @@
         .palette-items{
             height:100%;
             padding:10px 20px 5px;
+            cursor: pointer;
             @include border(1px, $item_border_color, 0);
             background:white;
             .product-img{
@@ -127,21 +128,25 @@
                     font-size:21px;
                     line-height:23px;
                 }
-                .item-action-icons {
-                    bottom:20px;
-                    position:absolute;
-                    div {
-                        width:30px;
-                        height:30px;
-                        i{
-                            font-size:14px;
-                            line-height:30px;
-                        }
+
+            }
+            div.item {
+                height: 100%;
+            }
+            .item-action-icons {
+                bottom:20px;
+                position:absolute;
+                div {
+                    width:30px;
+                    height:30px;
+                    i{
+                        font-size:14px;
+                        line-height:30px;
                     }
                 }
             }
         }
-    } 
+    }
 }
 @media all and (max-width:3000px){
     .shops {
@@ -241,7 +246,7 @@
                 }
             }
         }
-    } 
+    }
 }
 
 @media all and (max-width:1400px){
@@ -253,7 +258,7 @@
     }
     .shops-2r{
         height:440px;
-    } 
+    }
 }
 @media all and (max-width:1344px){
     .shops {
@@ -264,7 +269,7 @@
     }
     .shops-2r{
         height:370px;
-    } 
+    }
 }
 @media all and (max-width:1300px){
     .shops {
@@ -275,7 +280,7 @@
     }
     .shops-2r{
         height:420px;
-    } 
+    }
 }
 @media all and (max-width:1200px){
     .shops {
@@ -291,7 +296,7 @@
                 white-space:nowrap !important;
             }
         }
-    } 
+    }
 }
 @media all and (max-width:1100px){
     .shops {
@@ -302,7 +307,7 @@
     }
     .shops-2r{
         height:360px;
-    } 
+    }
 }
 @media all and (max-width:1000px){
     .shops {
@@ -381,7 +386,7 @@
             font-size:14px !important;
         }
     }
-    
+
 }
 @media all and (max-width:700px){
     .shops{
@@ -389,7 +394,7 @@
         .outter-shops{
             height:770px;
         }
-    } 
+    }
 }
 @media all and (max-width:600px){
     .shops{
@@ -400,9 +405,9 @@
         .outter-shops{
             height:1075px;
         }
-    } 
+    }
     .shops-2r {
-        height:450px;                     
+        height:450px;
         flex-direction: column;
         .first-item{
             width:100%;
@@ -422,7 +427,7 @@
         p.sub-title{
             margin:0;
         }
-    } 
+    }
     .shops-2r{
         height:705px;
     }
@@ -433,7 +438,7 @@
         .outter-shops{
             height:1015px;
         }
-    } 
+    }
 }
 @media all and (max-width:440px){
     .shops{
@@ -441,7 +446,7 @@
         .outter-shops{
             height:950px;
         }
-    } 
+    }
 }
 @media all and (max-width:330px){
     .shops{
@@ -449,7 +454,7 @@
         .outter-shops{
             height:860px;
         }
-    } 
+    }
     .shops-2r{
         height:630px;
     }
