--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -306,15 +306,20 @@ button.owl-next span{
                 height:50%;
                 margin-top:5%;
             }
-            .item-action-icons{
-                bottom:35px;
-            }
+
             p.sub-title.bottom{
                 position:absolute;
                 bottom:0;
                 margin:0;
             }
         }
+    }
+    div.product-item {
+        height: 100%;
+    }
+    .item-action-icons{
+        position: absolute;
+        bottom:55px;
     }
 }
 
