--- a/resources/assets/sass/2-layouts/_single-product-with-des.scss
+++ b/resources/assets/sass/2-layouts/_single-product-with-des.scss
@@ -127,7 +127,8 @@
                     .color{
                         margin-right:8px;
                         padding:6px;
-                        width:50px;
+                        width:max-content;
+                        min-width: max-content;
                         height:50px;
                         @include border(2px,$comment_color, 50%);
                         transition:0.3s ease-in-out;
@@ -139,6 +140,7 @@
                             width:34px;
                             height:34px;
                             border:none;
+                            margin: 0;
                             &.grey{
                                 background:$product_grey_color;
                             }
