--- a/resources/assets/sass/2-layouts/_catalog-section-items.scss
+++ b/resources/assets/sass/2-layouts/_catalog-section-items.scss
@@ -15,6 +15,7 @@
             width:32%;
             height:300px;
             margin-bottom:2%;
+            margin-right: 1%;
             .item{
                 @include displayFlex(center, column, center);
                 text-align:center;
