--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -561,7 +561,7 @@ nav ol.breadcrumb{
     .item{
         height:390px;
         width:100%;
-        cursor: pointer;
+        //cursor: pointer;
         @include displayFlex(flex-start, row, center);
         @include border(1px, $item_border_color, 0);
         background:white;
