fix rating in watched products

--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -318,8 +318,8 @@ button.owl-next span{
         height: 100%;
     }
     .item-action-icons{
-        position: absolute;
-        bottom:55px;
+        position: relative;
+        bottom:85px;
     }
 }
 
