--- a/resources/assets/sass/2-layouts/_mmenu.scss
+++ b/resources/assets/sass/2-layouts/_mmenu.scss
@@ -235,7 +235,7 @@ nav#menu{
 // search icon and bar 414px
 
 #header-2{
-	overflow: hidden;
+	overflow: initial;
     .menu-logo{
         a{
             opacity:1;
