fix rating in new-products

--- a/resources/assets/sass/2-layouts/_blogs.scss
+++ b/resources/assets/sass/2-layouts/_blogs.scss
@@ -1,6 +1,6 @@
 .outter-blogs{
     width:80%;
-    margin:1% auto;
+    margin:0 auto;
     @include displayFlex(flex-start, row, flex-start);
     .item{
         height:310px;
