--- a/resources/assets/sass/2-layouts/_single-product-with-des.scss
+++ b/resources/assets/sass/2-layouts/_single-product-with-des.scss
@@ -522,7 +522,7 @@
         flex-flow: column;
         .comments {
             width: 100%;
-            border-bottom: 1px solid #0042ff;
+            //border-bottom: 1px solid #0042ff;
         }
         .leave-comment {
             width: 100%;
