--- a/resources/assets/sass/2-layouts/_top-brands.scss
+++ b/resources/assets/sass/2-layouts/_top-brands.scss
@@ -5,10 +5,10 @@
     background:white;
     text-align:left;
     .one-row-brands{
-        display: flex;
-        flex-wrap: wrap;
+        //display: flex;
+        //flex-wrap: wrap;
         .item{
-            width:8.333%;
+            width:100%;
             height:45px;
             margin: .5em 0;
             @include displayFlex(center, row, center);
