--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -104,6 +104,17 @@ p.sub-title{
         }
     }
 }
+p.blog-title{
+    color: #eaecef;
+    font-size:18px;
+    text-align: left;
+    a{
+        color: $comment_color;
+        &:hover, &.active{
+            color:$link_hover_color;
+        }
+    }
+}
 input#submit{
     background:$item_price_color;
     color:white;
